hard-gists/a303721443f5eb46035e/run.log
=== Docker Run Log for a303721443f5eb46035e ===
Started at: Mi 29. Okt 18:51:51 CET 2025

[2025-10-29 18:51:52] START: Running container for a303721443f5eb46035e
[2025-10-29 18:51:52] SUCCESS: Container 1b88d9ff4530c374898474cce8d0087b09bc961d9c87cdec09149d7be0122be1 started for a303721443f5eb46035e
=== Container logs for a303721443f5eb46035e ===
  File "/snippet.py", line 5
    print message.Body
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a303721443f5eb46035e ===
[2025-10-29 18:51:54] INFO: Container 1b88d9ff4530c374898474cce8d0087b09bc961d9c87cdec09149d7be0122be1 has stopped
